added ffmpeg reference

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
 <body class="main">
 
     <div class="content">
-        <h1>welcome to youtube-download</h1>
+        <h1>welcome to youtube-dl</h1>
 
         <form id="myForm">
             <input type="text" placeholder="enter video url here..." id="video_link">
@@ -54,7 +54,7 @@
         </form>
 
         <p>projekts vēl nav pilnībā pabeigts, var gadīties kļūdas😀👍👍</p>
-        <p>Powered by <a href="https://flask.palletsprojects.com/en/2.3.x/#">Flask</a> and <a href="https://github.com/yt-dlp/yt-dlp">yt_dlp</a></p>
+        <p>Powered by <a href="https://flask.palletsprojects.com/en/2.3.x/#">Flask</a>, <a href="https://github.com/yt-dlp/yt-dlp">yt_dlp</a> and <a href="https://ffmpeg.org/">ffmpeg</a></p>
 
     </div>
 
